[tool.poetry]
name = "myter"
version = "0.1.0"
description = ""
authors = ["hashimoto <ryuichi.hashimoto.git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mitreattack-python = "^3.0.6"
openpyxl = "^3.1.4"
peewee = "^3.17.5"
pymysql = "^1.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
